--- a/vis/src/components/Duplicate/Duplicate.scss
+++ b/vis/src/components/Duplicate/Duplicate.scss
@@ -43,6 +43,7 @@
     border-right: 1px solid var(--clr-border);
     background-color: var(--clr-bg-explorer);
     color: var(--clr-neutral-700);
+    font-size: var(--font-size-sm);
   }
 
   @media screen and (max-width: 1024px) {
