--- a/uikit/src/code/Window.scss
+++ b/uikit/src/code/Window.scss
@@ -1,42 +1,53 @@
-@import "../utils.styl"
-@import "../vars.styl"
+@import "../utils";
+@import "../vars";
 
-.window
-  flexColumn(0);
+.window {
+  @include flexColumn(0);
   background-color: var(--clr-bg-code);
-  border-radius: $borderRadius;
+  border-radius: var(--radius-lg);
   border: 1px solid var(--clr-border);
 
   font-size: $codeFontSize;
-  &-responsive
+  &-responsive {
     font-size: $codeResponsiveFontSize;
-    @media screen and (min-width: $codeFontMaxOutWidth)
+    @media screen and (min-width: $codeFontMaxOutWidth) {
       font-size: $codeMaxFontSize
-    @media screen and (max-width: $codeFontMinOutWidth)
+    }
+    @media screen and (max-width: $codeFontMinOutWidth) {
       font-size: $codeMinFontSize;
+    }
+  }
 
-  .header
-    flexRow(var(--space-4));
+  .header {
+    @include flexRow(var(--space-4));
     padding: var(--space-2) var(--space-4);
     align-items: center;
     border-top-left-radius: var(--radius-lg);
     border-top-right-radius: var(--radius-lg);
     background-color: var(--clr-bg-window-header);
     border-bottom: 1px solid var(--clr-border);
-    .icons
-      flexRow(var(--space-2));
-      .icon
+    .icons {
+      @include flexRow(var(--space-2));
+      .icon {
         width: var(--size-3);
         height: var(--size-3);
         display: flex;
         border-radius: 50%;
-        &.red
+        &.red {
           background-color: $appIconRed;
-        &.yellow
+        }
+        &.yellow {
           background-color: $appIconYellow;
-        &.green
+        }
+        &.green {
           background-color: $appIconGreen;
-    .name
+        }
+      }
+    }
+    .name {
       line-height: 1;
       font-size: var(--font-size-md);
       color: var(--clr-fg-code);
+    }
+  }
+}
