--- a/uikit/src/code/Lines.scss
+++ b/uikit/src/code/Lines.scss
@@ -1,9 +1,9 @@
-@import "../utils.styl"
-@import "../vars.styl"
+@import "../utils";
+@import "../vars";
 
-.line
-  flexRow();
-  &>span:nth-child(1)
+.line {
+  @include flexRow();
+  &>span:nth-child(1) {
     color: var(--clr-fg-code-comment);
     padding: 0 var(--space-3) 0 var(--space-2);
     cursor: default;
@@ -11,3 +11,5 @@
     user-select: none;
     text-align: right;
     font-weight: lighter;
+  }
+}
