--- a/uikit/src/components/TopBar.scss
+++ b/uikit/src/components/TopBar.scss
@@ -1,27 +1,33 @@
-@import "../vars.styl";
-@import "../utils.styl";
+@import "../vars";
+@import "../utils";
 
-.topbar-container
-  flexColumn();
+.topbar-container {
+  @include flexColumn();
   align-items: center;
   width: 100%;
-  .strip
+  .strip {
     width: 100%;
     height: var(--space-1);
     background-color: $accent;
-  .topbar
-    flexRow();
+  }
+  .topbar {
+    @include flexRow();
     width: 100%;
     max-width: 970px;
     justify-content: space-between;
     padding-right: 1em;
-    @media screen and (max-width: $breakHeaderMenu)
+    @media screen and (max-width: $breakHeaderMenu) {
       flex-direction: column;
-      &-menu
+      &-menu {
         padding-top: var(--space-2);
-    &-header
+      }
+    }
+    &-header {
       grid-area: header;
       color: white;
       display: flex;
       justify-content: flex-start;
       align-items: flex-start;
+    }
+  }
+}
