fix: function snippet highlighting

--- a/uikit/src/components/Logo.scss
+++ b/uikit/src/components/Logo.scss
@@ -1,11 +1,9 @@
 @import "../utils";
 @import "../vars";
 
-$logoSize: 48px;
-
 .logo {
   @include flexRow(calc(var(--logo-size) / 16));
-  --logo-size: $logoSize;
+  --logo-size: 48px;
   align-items: flex-end;
   &-icon {
     display: flex;
