--- a/uikit/src/components/UiKitApp.scss
+++ b/uikit/src/components/UiKitApp.scss
@@ -1,64 +1,76 @@
-@import "../utils.styl"
-@import "../vars.styl"
+@import "../utils";
+@import "../vars";
 
-lightTheme()
+@mixin lightTheme() {
   --clr-bg-main: var(--clr-neutral-50);     
   --clr-bg-secondary: var(--clr-bg);
   --clr-border: var(--clr-neutral-100);
   --clr-fg-text: var(--clr-fg);
   --clr-fg-title: var(--clr-neutral-600);
+}
 
-darkTheme()
+@mixin darkTheme() {
   --clr-bg-main: var(--clr-bg);
   --clr-bg-secondary: var(--clr-second-50);
   --clr-border: var(--clr-neutral-100);
   --clr-fg-text: var(--clr-fg);
   --clr-fg-title: var(--clr-neutral-600);
+}
 
-*
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
 
-:root
+:root {
   font-size: 16px;
+}
 
-body
+body {
   min-height: 100vh;
   font-family: var(--font-body);
+}
 
-main
-  &.light
+main {
+  &.light {
     color-scheme: light;
-    lightTheme();
-  &.dark
+    @include lightTheme();
+  }
+  &.dark {
     color-scheme: dark;
-    darkTheme();
-  flexColumn()
+    @include darkTheme();
+  }
+  @include flexColumn();
   min-height: 100vh;
   // justify-content: flex-start;
   // align-items: center;
   background-color: var(--clr-bg-main);
   color: var(--clr-fg-text);
-  header
+  header {
     // width: 100%;
-    flexColumn();
+    @include flexColumn();
     justify-content: center;
     align-items: center;
     padding: var(--space-xl);
-  section
-    flexColumn()
+  }
+  section {
+    @include flexColumn();
     // max-width: var(--size-6xl);
     // min-width: var(--size-4xl);
     // padding: var(--space-8);
     // width: 80vw;
     font-size: var(--font-size-md);
-    @media screen and (max-width: $breakSnippetsColumn)
+    @media screen and (max-width: $breakSnippetsColumn) {
       // width: 100%;
       padding: 0 var(--space-2);
       max-width: unset;
-    &.bleed
+    }
+    &.bleed {
       max-width: 100%;
       width: 100%;
       margin: 0;
       padding: 0;
+    }
+  }
+}
