--- a/uikit/src/components/Sidebar/Sidebar.scss
+++ b/uikit/src/components/Sidebar/Sidebar.scss
@@ -44,10 +44,10 @@
   }
 }
 
-.sidebar-button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: var(--z-sidebar-menu);
-  cursor: pointer;
-}
+// .sidebar-button {
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+//   z-index: var(--z-sidebar-menu);
+//   cursor: pointer;
+// }
