--- a/uikit/src/components/Spinner/Donut.scss
+++ b/uikit/src/components/Spinner/Donut.scss
@@ -1,19 +1,20 @@
 .donut {
-    width: var(--size-spinner);
-    height: var(--size-spinner);
-    border: 5px solid var(--clr-muted);
-    border-bottom-color: var(--clr-dot);
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation var(--duration) linear infinite;
- }
+  --size-border: calc(var(--size-spinner) / 5);
+  width: var(--size-spinner);
+  height: var(--size-spinner);
+  border: var(--size-border) solid var(--clr-muted);
+  border-bottom-color: var(--clr-dot);
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation var(--duration) linear infinite;
+}
 
- @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
- } 
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
