--- a/uikit/src/components/Hamburger/Hamburger.scss
+++ b/uikit/src/components/Hamburger/Hamburger.scss
@@ -13,7 +13,7 @@
     -webkit-transition: .5s ease-in-out;
     -moz-transition: .5s ease-in-out;
     -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+    transition: transform .5s ease-in-out;
     cursor: pointer;
 
     span {
