--- a/vis/src/components/Explorer/Explorer.scss
+++ b/vis/src/components/Explorer/Explorer.scss
@@ -41,6 +41,7 @@
     display: flex;
     flex-direction: column;
     cursor: pointer;
+    padding-right: var(--space-1);
     span {
       display: flex;
       white-space: nowrap;
@@ -75,15 +76,22 @@
 
   // for the only list
   & > ul {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     // roots
     & > li > ul {
+      display: flex;
+      flex-direction: column;
       margin: 0 0 0 var(--margin);
       padding: 0;
     }
     // every other level
     & > li > ul ul {
-        margin: 0 0 0 var(--margin);
-        padding: 0;
+      display: flex;
+      flex-direction: column;
+      margin: 0 0 0 var(--margin);
+      padding: 0;
     }
   }
 }
