--- a/vis/src/components/Filters/Filters.scss
+++ b/vis/src/components/Filters/Filters.scss
@@ -7,11 +7,9 @@
   max-height: 100vh;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: var(--space-4);
-  padding-top: 48px;
   gap: var(--space-4);
-  background-color: var(--clr-bg-main);
-  box-shadow: var(--shadow-xl);
+  // background-color: var(--clr-bg-main);
+  // box-shadow: var(--shadow-xl);
 
   &-hidden {
     opacity: 0
@@ -24,7 +22,6 @@
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    gap: 2px;
 
     @include focusable(var(--clr-accent), 'outside');
 
@@ -52,7 +49,7 @@
        &:before {
           content: '';
           position: absolute;
-          background-color: var(--clr-accent);
+          // background-color: var(--clr-accent);
           border-radius: var(--size-2);
           top: calc(50% - (var(--marker-size) / 2));
           left: 0;
@@ -70,7 +67,7 @@
     .label {
       font-weight: lighter;
       font-size: smaller;
-      color: var(--clr-fg);
+      // color: var(--clr-fg);
       display: flex;
       gap: var(--space-2);
       flex-direction: row;
