--- a/vis/src/components/Filters/Filters.scss
+++ b/vis/src/components/Filters/Filters.scss
@@ -61,7 +61,10 @@
   }
 
   .filter {
-    display: flex;
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -10;
     flex-direction: column;
     gap: var(--space-2);
     .label {
