fix: style changes

--- a/packages/uikit/src/colors.css
+++ b/packages/uikit/src/colors.css
@@ -44,6 +44,45 @@
     --clr-second-900: #594122;
     --clr-second-950: #40321f;
     --clr-second-975: #27221c;
+    --clr-crust-25: #f6f8fb;
+    --clr-crust-50: #f4f7f9;
+    --clr-crust-100: #f2f5f8;
+    --clr-crust-200: #edf0f4;
+    --clr-crust-300: #e7eaf0;
+    --clr-crust-400: #e2e5ec;
+    --clr-crust-500: #dce0e8;
+    --clr-crust-600: #bbbfc6;
+    --clr-crust-700: #9a9fa6;
+    --clr-crust-800: #7b8086;
+    --clr-crust-900: #5d6368;
+    --clr-crust-950: #41474c;
+    --clr-crust-975: #272c31;
+    --clr-mantle-25: #f7f9fb;
+    --clr-mantle-50: #f5f8fa;
+    --clr-mantle-100: #f4f7f9;
+    --clr-mantle-200: #f1f3f7;
+    --clr-mantle-300: #edf0f4;
+    --clr-mantle-400: #eaecf2;
+    --clr-mantle-500: #e6e9ef;
+    --clr-mantle-600: #c3c6cc;
+    --clr-mantle-700: #a1a5ab;
+    --clr-mantle-800: #80858a;
+    --clr-mantle-900: #61666b;
+    --clr-mantle-950: #43494d;
+    --clr-mantle-975: #282d31;
+    --clr-base-25: #f7f9fc;
+    --clr-base-50: #f7f9fb;
+    --clr-base-100: #f6f8fb;
+    --clr-base-200: #f4f6f9;
+    --clr-base-300: #f3f5f8;
+    --clr-base-400: #f1f3f6;
+    --clr-base-500: #eff1f5;
+    --clr-base-600: #cacdd1;
+    --clr-base-700: #a7aaaf;
+    --clr-base-800: #85898d;
+    --clr-base-900: #64696d;
+    --clr-base-950: #454b4f;
+    --clr-base-975: #292e32;
 }
 
 .clrs-dark {
@@ -92,4 +131,43 @@
     --clr-second-900: #eac7a0;
     --clr-second-950: #f0d8be;
     --clr-second-975: #f5e9dd;
+    --clr-crust-25: #0d1418;
+    --clr-crust-50: #0e1319;
+    --clr-crust-100: #0e1319;
+    --clr-crust-200: #0f1319;
+    --clr-crust-300: #10121a;
+    --clr-crust-400: #10121a;
+    --clr-crust-500: #11111b;
+    --clr-crust-600: #2c2d36;
+    --clr-crust-700: #4a4b53;
+    --clr-crust-800: #6a6a72;
+    --clr-crust-900: #8b8c93;
+    --clr-crust-950: #aeafb4;
+    --clr-crust-975: #d2d4d8;
+    --clr-mantle-25: #0e1419;
+    --clr-mantle-50: #0f151a;
+    --clr-mantle-100: #10151b;
+    --clr-mantle-200: #12161d;
+    --clr-mantle-300: #141720;
+    --clr-mantle-400: #161722;
+    --clr-mantle-500: #181825;
+    --clr-mantle-600: #33333f;
+    --clr-mantle-700: #50505b;
+    --clr-mantle-800: #6f6f79;
+    --clr-mantle-900: #8f9098;
+    --clr-mantle-950: #b1b2b8;
+    --clr-mantle-975: #d4d5da;
+    --clr-base-25: #0e1519;
+    --clr-base-50: #10151b;
+    --clr-base-100: #11161c;
+    --clr-base-200: #151821;
+    --clr-base-300: #181a25;
+    --clr-base-400: #1b1c29;
+    --clr-base-500: #1e1e2e;
+    --clr-base-600: #393848;
+    --clr-base-700: #555563;
+    --clr-base-800: #73737f;
+    --clr-base-900: #93939d;
+    --clr-base-950: #b3b4bc;
+    --clr-base-975: #d5d7db;
 }
